test-legacy/tests/compiler/from_to/from_failure_extension_bz2.txt
error: no known format for extension `.extension`
 --> tests/compiler/from_to/from_failure_extension_bz2.tql:5:14
  |
5 | from "failure.extension.bz2"
  |              ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `cef`, `csv`, `feather`, `json`, `jsonl`, `jsonld`, `leef`, `ndjson`, `parquet`, `pcap`, `ssv`, `tsv`, `yaml`, `zeek`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/reference/operators/from
